# tagallery

./: .gitignore  .gitmodules  CMakeLists.txt
contrib/: CMakeLists.txt
res/: db_schema.txt
src/: CMakeLists.txt  main.cpp
src/engine/: Access.cpp  Access.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Gallery.cpp  Gallery.hpp  Internals.cpp  Internals.hpp  Item.cpp  Item.hpp  Platform.hpp  PlatformWindows.cpp  Statements.hpp  Tag.cpp  Tag.hpp  TagType.cpp  TagType.hpp
src/engine/platform/: PlatformWindows.cpp
src/ui/: Application.cpp  Application.hpp  CMakeLists.txt  GalleryWindow.cpp  GalleryWindow.hpp  MainFrame.cpp  MainFrame.hpp  TagListView.cpp  TagListView.hpp
